django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8006
  selector:
    app: django
    tier: frontend
