mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: mariadb
    tier: backend
spec:
  selector:
    app: mariadb
    tier: backend
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
